modified nuget package name

--- a/Polly.RetryManager/Polly.RetryManager.csproj
+++ b/Polly.RetryManager/Polly.RetryManager.csproj
@@ -8,6 +8,7 @@
     <RepositoryType>Git</RepositoryType>
     <RepositoryUrl>https://github.com/MichalTichy/Polly.RetryManager</RepositoryUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>RetryManager</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
