updated package info

--- a/Polly.RetryManager/Polly.RetryManager.csproj
+++ b/Polly.RetryManager/Polly.RetryManager.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Michal Tichý</Authors>
-    <Description>Small set of helpers to build logic for retry management.</Description>
+    <Description>Small set of helpers to build logic for Polly retry management.</Description>
     <PackageProjectUrl>https://github.com/MichalTichy/Polly.RetryManager</PackageProjectUrl>
     <RepositoryType>Git</RepositoryType>
     <RepositoryUrl>https://github.com/MichalTichy/Polly.RetryManager</RepositoryUrl>
